--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ task run(type: JavaExec, dependsOn: classes) {
 task fatJar(type: Jar) {
     baseName = project.name + '-all'
     manifest {
-        attributes 'Main-Class': 'ch.zhdk.tracking.MainKt'
+        attributes 'Main-Class': 'ch.zhdk.tracking.Main'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
