--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    // processing
+    // processing (not directly used)
     compile group: 'org.processing', name: 'core', version: '3.3.7'
 
     // javacv
@@ -35,13 +35,17 @@ dependencies {
     // javafx
     compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
     compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     // osc
     compile group: 'com.illposed.osc', name: 'javaosc-core', version: '0.6'
 
     // statistics
     compile 'org.nield:kotlin-statistics:1.2.1'
+
+    // realsense2
+    compile files('lib/librealsense2-2.25.0-1.5.2-20191010.225216-49-macosx-x86_64.jar')
+    compile files('lib/librealsense2-2.25.0-1.5.2-20191010.225216-49.jar')
 }
 
 compileKotlin {
