--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    id "com.github.ManifestClasspath" version "0.1.0-RELEASE"
 }
 
 group 'ch.zhdk.tracking'
