--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ examples/MovieGenerator/nr88.mp4
 *.b#*
 data/markertracking.mov
 data/rotationtest.mov
+data/markertracking450.mov
+data/markertracking240.mov
+data/markertracking120.mov
