--- a/hardware/Beacon_code/Attiny/platformio.ini
+++ b/hardware/Beacon_code/Attiny/platformio.ini
@@ -11,14 +11,7 @@
 [env:ATTINY45]
 platform = atmelavr
 board = ATTINY45
+board_build.f_cpu = 8000000L
 framework = arduino
-
-upload_protocol = stk500v1
-; each flag in a new line
-upload_flags =
-    -P$UPLOAD_PORT
-    -b$UPLOAD_SPEED
-
-; edit these lines
-upload_port = /dev/cu.usbmodem14321
-upload_speed = 19200
+upload_protocol = usbtiny
+upload_flags = -e
