--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,12 @@ javafx {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
-    // processing (not directly used)
-    compile group: 'org.processing', name: 'core', version: '3.3.7'
 
     // javacv
     compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.1'
@@ -52,6 +50,10 @@ dependencies {
     compile files('lib/librealsense2-2.25.0-1.5.2-macosx-x86_64.jar')
     compile files('lib/librealsense2-2.25.0-1.5.2-linux-x86_64.jar')
     compile files('lib/librealsense2-2.25.0-1.5.2-windows-x86_64.jar')
+
+    // bildspur libs
+    implementation "com.github.cansik:bildspur-base:0.1.0"
+    implementation "com.github.cansik:bildspur-ui:0.1.0"
 }
 
 compileKotlin {
