--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 group 'ch.zhdk.tracking'
 version '0.1'
 
+ext.ktor_version = '1.2.2'
+
 sourceCompatibility = 1.8
 
 javafx {
@@ -54,6 +56,12 @@ dependencies {
     // bildspur libs
     implementation "com.github.cansik:bildspur-base:0.1.0"
     implementation "com.github.cansik:bildspur-ui:0.1.0"
+
+    // ktor
+    compile "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "io.ktor:ktor-locations:$ktor_version"
+    implementation "io.ktor:ktor-websockets:$ktor_version"
 }
 
 compileKotlin {
