--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 group 'ch.zhdk.tracking'
 version '0.1'
 
+def javaCvVersion = '1.5.3'
+
 ext.ktor_version = '1.2.2'
 
 sourceCompatibility = 1.8
@@ -27,7 +29,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // javacv
-    compile group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.1'
+    compile group: 'org.bytedeco', name: 'javacv', version: "$javaCvVersion"
+    compile group: 'org.bytedeco', name: 'opencv-platform', version: "4.3.0-$javaCvVersion"
+    compile group: 'org.bytedeco', name: 'openblas-platform', version: "0.3.9-$javaCvVersion"
 
     // json
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
@@ -39,23 +43,15 @@ dependencies {
     compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     // osc
-    //compile group: 'com.illposed.osc', name: 'javaosc-core', version: '0.6'
-    // added an own compiled version with broadcast enabled
-    compile files('lib/javaosc-core-0.7-SNAPSHOT.jar')
+    compile group: 'com.illposed.osc', name: 'javaosc-core', version: '0.7'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
     // statistics
     compile 'org.nield:kotlin-statistics:1.2.1'
 
-    // librealsense2
-    compile files('lib/librealsense2-2.25.0-1.5.2.jar')
-    compile files('lib/librealsense2-2.25.0-1.5.2-macosx-x86_64.jar')
-    compile files('lib/librealsense2-2.25.0-1.5.2-linux-x86_64.jar')
-    compile files('lib/librealsense2-2.25.0-1.5.2-windows-x86_64.jar')
-
     // bildspur libs
-    implementation "com.github.cansik:bildspur-base:0.1.0"
-    implementation "com.github.cansik:bildspur-ui:0.1.0"
+    implementation "com.github.cansik:bildspur-base:0.2.0"
+    implementation "com.github.cansik:bildspur-ui:0.2.0"
 
     // ktor
     compile "io.ktor:ktor-server-netty:$ktor_version"
