--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile group: 'org.bytedeco', name: 'javacv', version: "$javaCvVersion"
     compile group: 'org.bytedeco', name: 'opencv-platform', version: "4.3.0-$javaCvVersion"
     compile group: 'org.bytedeco', name: 'openblas-platform', version: "0.3.9-$javaCvVersion"
+    compile group: 'org.bytedeco', name: 'librealsense2-platform', version: "2.29.0-$javaCvVersion"
 
     // json
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
