added basic logging lib

--- a/hardware/TactileDevice/platformio.ini
+++ b/hardware/TactileDevice/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps=log4arduino
-build_flags=-DENABLE_LOG4ARDUINO
+lib_deps = log4arduino
+build_flags = -DENABLE_LOG4ARDUINO
