updated hardware prototype

--- a/hardware/Beacon_code/ESP32/platformio.ini
+++ b/hardware/Beacon_code/ESP32/platformio.ini
@@ -13,7 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 5602 #... IMU
-    28  #... NeoPixels
     1841 #... BLE Esp32
-    126 #... FastLED
+    547  #... Neopixel bus
 monitor_speed = 115200
