--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
 
     // bildspur libs
     implementation "com.github.cansik:bildspur-base:0.2.4"
-    implementation "com.github.cansik:bildspur-ui:0.2.0"
+    //implementation "com.github.cansik:bildspur-ui:0.2.0"
+    implementation 'com.github.cansik:bildspur-ui:-SNAPSHOT'
 
     // ktor
     compile "io.ktor:ktor-server-netty:$ktor_version"
