Updated Hardware with Neopixel

--- a/hardware/01_Software/Beacon_code/ESP32/platformio.ini
+++ b/hardware/01_Software/Beacon_code/ESP32/platformio.ini
@@ -10,9 +10,10 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = featheresp32 # might need to use espressif32
 framework = arduino
-lib_deps = 5602 #... IMU
-    1841 #... BLE Esp32
-    547  #... Neopixel bus
+lib_deps =  SparkFun 9DoF IMU Breakout - ICM 20948 - Arduino Library #... SparkFun 9DoF IMU Breakout - ICM 20948 - Arduino Library
+    ESP32 BLE Arduino #... BLE Esp32
+    NeoPixelBus  #... Neopixel bus
+    SensorFusion
 monitor_speed = 115200
