--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id "com.github.ManifestClasspath" version "0.1.0-RELEASE"
 }
@@ -13,6 +13,11 @@ def javaCvVersion = '1.5.3'
 ext.ktor_version = '1.2.2'
 
 sourceCompatibility = 1.8
+
+wrapper {
+    gradleVersion = '6.3'
+    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-bin.zip"
+}
 
 javafx {
     version = "11"
@@ -55,7 +60,7 @@ dependencies {
     implementation "com.github.cansik:bildspur-base:0.2.4"
     //implementation "com.github.cansik:bildspur-ui:0.2.0"
     implementation 'com.github.cansik:bildspur-ui:fdbba863da'
-    implementation 'com.github.cansik:ble-serial-bridge:b47fe56aaa'
+    implementation 'com.github.cansik:ble-serial-bridge:4df2afd994'
 
     // ktor
     compile "io.ktor:ktor-server-netty:$ktor_version"
