implemented primitive rendering

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ wrapper {
 
 javafx {
     version = "11"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
 }
 
 repositories {
