--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,12 @@
+pluginManagement {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = 'ZHdK-IR-Tracking'
 
+gradle.rootProject { ext.javacppVersion = '1.5.4' }
