--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,9 @@ dependencies {
     compile 'org.nield:kotlin-statistics:1.2.1'
 
     // bildspur libs
-    implementation "com.github.cansik:bildspur-base:7436a637a5"
-    implementation 'com.github.cansik:bildspur-ui:fdbba863da'
-    implementation 'com.github.cansik:ble-serial-bridge:4df2afd994'
+    compile "com.github.cansik:bildspur-base:0.3.0"
+    compile 'com.github.cansik:bildspur-ui:0.3.2'
+    compile 'com.github.cansik:ble-serial-bridge:4df2afd994'
 
     // ktor
     compile "io.ktor:ktor-server-netty:$ktor_version"
