--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,33 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'org.openjfx.javafxplugin' version '0.0.12'
     id "com.github.ManifestClasspath" version "0.1.0-RELEASE"
     id 'org.bytedeco.gradle-javacpp-platform' version "$javacppVersion"
 }
 
 group 'ch.zhdk.tracking'
-version '0.1'
+version '0.2'
 
 ext.ktor_version = '1.2.2'
 
-sourceCompatibility = 1.8
-
 wrapper {
-    gradleVersion = '6.3'
+    gradleVersion = '7.4.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-bin.zip"
 }
 
+compileJava {
+    sourceCompatibility = 11
+    targetCompatibility = 11
+}
+
+compileKotlin {
+    sourceCompatibility = 11
+    targetCompatibility = 11
+}
+
 javafx {
-    version = "11"
+    version = "17"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
 }
 
@@ -30,48 +38,41 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation  group: 'junit', name: 'junit', version: '4.12'
 
     // javacv
-    compile group: 'org.bytedeco', name: 'javacv', version: "$javacppVersion"
-    compile group: 'org.bytedeco', name: 'opencv-platform', version: "4.4.0-$javacppVersion"
-    compile group: 'org.bytedeco', name: 'openblas-platform', version: "0.3.10-$javacppVersion"
-    compile group: 'org.bytedeco', name: 'librealsense2-platform', version: "2.29.0-$javacppVersion"
-    compile group: 'org.bytedeco', name: 'ffmpeg-platform', version: "4.3.1-$javacppVersion"
+    implementation  group: 'org.bytedeco', name: 'javacv', version: "$javacppVersion"
+    implementation  group: 'org.bytedeco', name: 'opencv-platform', version: "4.4.0-$javacppVersion"
+    implementation  group: 'org.bytedeco', name: 'openblas-platform', version: "0.3.10-$javacppVersion"
+    implementation  group: 'org.bytedeco', name: 'librealsense2-platform', version: "2.29.0-$javacppVersion"
+    implementation  group: 'org.bytedeco', name: 'ffmpeg-platform', version: "4.3.1-$javacppVersion"
 
     // json
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
-    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    implementation  group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    implementation  'com.github.salomonbrys.kotson:kotson:2.5.0'
 
     // javafx
-    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
+    implementation  group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    implementation  group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    implementation  group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     // osc
-    compile group: 'com.illposed.osc', name: 'javaosc-core', version: '0.7'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    implementation  group: 'com.illposed.osc', name: 'javaosc-core', version: '0.7'
+    implementation  group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
     // statistics
-    compile 'org.nield:kotlin-statistics:1.2.1'
+    implementation  'org.nield:kotlin-statistics:1.2.1'
 
     // bildspur libs
-    compile "com.github.cansik:bildspur-base:0.3.5"
-    compile 'com.github.cansik:bildspur-ui:0.4.2'
-    compile 'com.github.cansik:ble-serial-bridge:4df2afd994'
+    implementation  "com.github.cansik:bildspur-base:0.3.5"
+    implementation  'com.github.cansik:bildspur-ui:0.4.2'
+    implementation  'com.github.cansik:ble-serial-bridge:4df2afd994'
 
     // ktor
-    compile "io.ktor:ktor-server-netty:$ktor_version"
+    implementation  "io.ktor:ktor-server-netty:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
     implementation "io.ktor:ktor-locations:$ktor_version"
     implementation "io.ktor:ktor-websockets:$ktor_version"
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
 
 task run(type: JavaExec, dependsOn: classes) {
