--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.panteleyev.jpackage.ImageType
+
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.6.10'
@@ -139,5 +141,6 @@ tasks.jpackage {
     windows {
         icon = "data/favicon-96x96.ico"
         winConsole = true
+        type = ImageType.MSI
     }
 }
